--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,11 +8,18 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/image1"
+    <TextView
+        android:id="@+id/targetText"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="9"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:text="Target" />
+
+    <ImageView
+        android:id="@+id/selectedImage"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="20"
         app:srcCompat="@mipmap/ic_launcher" />
 
     <Button
@@ -20,6 +27,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="랜덤으로 이미지 불러오기" />
+        android:text="이미지 선택하기" />
+
+
 
 </LinearLayout>
