--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,24 +11,22 @@
     <TextView
         android:id="@+id/targetText"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_weight="1"
-        android:text="Target" />
+        android:text="Target Number" />
 
     <ImageView
         android:id="@+id/selectedImage"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="20"
-        app:srcCompat="@mipmap/ic_launcher" />
+        android:layout_height="0dp"
+        android:layout_weight="15"
+        app:srcCompat="@mipmap/ic_launcher_foreground" />
 
     <Button
         android:id="@+id/changeBtn"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_weight="1"
-        android:text="이미지 선택하기" />
-
-
+        android:text="이미지 선택" />
 
 </LinearLayout>
