--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,19 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:text="Target Number" />
+        android:text=""
+        android:textSize="20sp"
+        android:visibility="invisible"/>
+
+    <TextView
+        android:id="@+id/displayTargetNumber"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="15"
+        android:text=""
+        android:textSize="80sp"
+        android:gravity="center"
+        android:visibility="gone" />
 
     <ImageView
         android:id="@+id/selectedImage"
@@ -27,6 +39,6 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:text="이미지 선택" />
+        android:text="새 이미지 불러오기" />
 
 </LinearLayout>
